--- a/MyPractices.ipynb
+++ b/MyPractices.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNslvygvw2mlHUdD+kvTj+2",
+      "authorship_tag": "ABX9TyM2FqjqzY+tYDqWHtCjMXhE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/neslhan00/dsai301/blob/main/MyPractices.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/neslhan00/works/blob/main/MyPractices.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "p2kz-kkPprMw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
         },
         "outputId": "8973ad1d-1dcb-448c-9064-8be35a67c4a7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "id": "9fQQ2fJ-jJmq",
         "outputId": "4bb27a23-2f99-479e-dc4f-be358e294f54"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
         "id": "QGl542HJlRVr",
         "outputId": "8789d527-7abd-49ab-80d3-a16118c4dc2a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +598,7 @@
         "id": "KVKHih5-n-rs",
         "outputId": "feb59fbd-1307-4655-abfb-c990eb25277c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,6 +614,69 @@
             "Weak password.\n",
             "Strong password.\n",
             "Strong password.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DAYS CALCULATOR\n",
+        "\n",
+        "In this exercised I learned what complexities there are to calculating days between given dates, and how I could handle them. I learned about leap year calculation and implemented it to my days-in-month list. Finally, I wrote the main function, days-between-days, which iterate through the days between dates and adds them to the day count."
+      ],
+      "metadata": {
+        "id": "ajr7_zaXsr-W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def leapyear(myyear):\n",
+        "  if myyear%400==0:\n",
+        "    return 29\n",
+        "  if myyear%100==0:\n",
+        "    return 28\n",
+        "  if myyear%4==0:\n",
+        "    return 29\n",
+        "  else:\n",
+        "    return 28\n",
+        "\n",
+        "def daysInMonth(month,year):\n",
+        "  daysInMonthList = [31, leapyear(year), 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]\n",
+        "  return daysInMonthList[month-1]\n",
+        "\n",
+        "def nextDay(day1,month1,year1):\n",
+        "  if day1 == daysInMonth(month1,year1) and month1 == 12:\n",
+        "    return 1, 1, year1+1\n",
+        "  elif day1== daysInMonth(month1,year1):\n",
+        "    return 1, month1+1 , year1\n",
+        "  else:\n",
+        "    return day1+1, month1, year1\n",
+        "\n",
+        "def daysBetweenDates(day1, month1, year1, day2, month2, year2):\n",
+        "  days=0\n",
+        "  while not(day1,month1,year1)==(day2,month2,year2):\n",
+        "    day1,month1,year1=nextDay(day1,month1,year1)\n",
+        "    days=days+1\n",
+        "  return days\n",
+        "\n",
+        "print(daysBetweenDates(23 ,10 ,2003 ,7 ,11 ,2024))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kgGYeUpNsppb",
+        "outputId": "f879c95f-4abe-4548-da6a-bf956f42ccfe"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7686\n"
           ]
         }
       ]
